se sube actualizaciòn de vinculos anclados

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <p>nuevo</p>
+    <p>Los tres pilares de la web</p>
+    <p>Tim Berners-Lee considerado el padre de la web porque desarrollo los tres 
+        elementos basicos para el funcionamiento web:
+        HTML;
+        HTTP;
+        URL
+    </p>
+    <p>HTML</p>
+    <P>HTML, siglas de Hypertext Markup languaje, hace referenvia al lenguaje de marcado
+        para la elaboraciòn de paginas web. Es un standar que sirve de referencia para la elaboraciòn de paginas web.
+        en sus diferentes versiones, define una estructura bàsica y un còdigo(denominado còdigo HTML) para la definiciòn.
+    </P>
+    <a href = "#prueba">hola ancla</a>
+    <p ID = "prueba">HTML</p>
+    <P></P>
 </body>
 </html>
